# django_homeworks

./: README.md  pyproject.toml
homework_1/: index.html  main.py
